@@ -1,3 +1,11 @@
+2007-04-06 Carlos Nieves Onega <cnieves@iespana.es>
+
+	* lib/system-gschemrc.in, scheme/auto-place-attribs.scm:
+	  Improved the auto placing: if the attribute overlaps with pins
+	  (including pinnumbers), or the pin connection direction where 
+	  a net is supposed to be drawn, then the attributes are moved 
+	  automatically.
+
 2007-03-31 Peter Clifton <pcjc2@cam.ac.uk>
 
 	* src/x_dialog.c: Fixed confirm save on page-close dialogs to correctly
